tests/ui/traits/trait-upcasting/higher-ranked-upcasting-ub.current.stderr
error: higher-ranked subtype error
  --> $DIR/higher-ranked-upcasting-ub.rs:22:5
   |
LL |     x
   |     ^

error: higher-ranked subtype error
  --> $DIR/higher-ranked-upcasting-ub.rs:22:5
   |
LL |     x
   |     ^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

